@@ -28,8 +28,12 @@ repositories {
 // 只包含必要的依赖
 dependencies {
     // 使用Maven中央仓库中的Lombok依赖
-    implementation 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    // 代码生成
+    implementation 'com.squareup:javapoet:1.13.0'
+    compileOnly 'com.google.auto.service:auto-service-annotations:1.0.1'
+    annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
     
     // 测试依赖
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
@@ -40,16 +44,6 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
     options.fork = true
-    options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
-    options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
-    options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-    options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
-    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
-    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
-    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
-    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
-    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED']
 }
 
 // 测试配置
@@ -67,4 +61,8 @@ publishing {
     repositories {
         mavenLocal()
     }
+}
+
+tasks.withType(Jar).configureEach {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
